--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "run-p start:client start:server",
+    "start:client": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server server.json -p 3333"
+    "start:server": "json-server server.json -p 3333"
   },
   "browserslist": {
     "production": [
