--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
     "vercel": "^23.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "json-server": "^0.16.3"
   },
   "scripts": {
     "start": "run-p start:client start:server",
@@ -49,8 +50,7 @@
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
-    "axios-mock-adapter": "^1.19.0",
-    "json-server": "^0.16.3"
+    "axios-mock-adapter": "^1.19.0"
   },
   "eslintConfig": {
     "extends": [
