--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start:server": "json-server server.json -p 3333"
+    "start:server": "json-server server.json -p"
   },
   "browserslist": {
     "production": [
