--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
+    "json-server": "^0.16.3",
     "npm-run-all": "^4.1.5",
     "polished": "^4.1.1",
     "react": "^17.0.1",
@@ -22,16 +23,15 @@
     "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
     "vercel": "^23.1.2",
-    "web-vitals": "^1.0.1",
-    "json-server": "^0.16.3"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "run -p start:client start:server",
+    "start": "yarn npm-run-all --parallel start:client start:server",
     "start:client": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start:server": "json-server server.json -p"
+    "start:server": "json-server server.json -p 3333"
   },
   "browserslist": {
     "production": [
